Modernize to JDK 21 APIs