@@ -327,7 +327,7 @@ public class TestAsyncSemaphore
         assertThat(result).isNotDone();
         assertThat(tasks.getFutures()).hasSize(concurrency);
 
-        tasks.getFutures().get(0).set("value0");
+        tasks.getFutures().getFirst().set("value0");
         assertThat(result).isNotDone();
         assertThat(tasks.getFutures()).hasSize(concurrency + 1);
 
@@ -399,7 +399,7 @@ public class TestAsyncSemaphore
                 concurrency,
                 directExecutor());
         assertThat(result).isNotDone();
-        tasks.getFutures().get(0).set("value");
+        tasks.getFutures().getFirst().set("value");
         assertThat(result).isNotDone();
         result.cancel(true);
         assertThat(tasks.getFutures()).hasSize(concurrency + 1);
@@ -431,7 +431,7 @@ public class TestAsyncSemaphore
                 concurrency,
                 directExecutor());
         assertThat(result).isNotDone();
-        tasks.getFutures().get(0).set("value");
+        tasks.getFutures().getFirst().set("value");
         assertThat(result).isDone();
         assertThatFutureFailsWithMessageContaining(result, message);
         for (int i = 1; i < concurrency; i++) {
