@@ -30,7 +30,7 @@ public interface Response
     default String getHeader(String name)
     {
         List<String> values = getHeaders(name);
-        return values.isEmpty() ? null : values.get(0);
+        return values.isEmpty() ? null : values.getFirst();
     }
 
     default List<String> getHeaders(String name)
