@@ -25,10 +25,11 @@ import jakarta.ws.rs.core.PathSegment;
 import jakarta.ws.rs.core.UriBuilder;
 import jakarta.ws.rs.core.UriInfo;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
 import java.util.List;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 public class MockUriInfo
         implements UriInfo
@@ -167,28 +168,19 @@ public class MockUriInfo
                 continue;
             }
 
-            String key = urlDecode(pair.get(0));
+            String value1 = pair.getFirst();
+            String key = URLDecoder.decode(value1, UTF_8);
             String value = null;
             if (pair.size() != 1) {
                 value = QUERY_PARAM_VALUE_JOINER.join(pair.subList(1, pair.size()));
                 if (decode) {
-                    value = urlDecode(value);
+                    value = URLDecoder.decode(value, UTF_8);
                 }
             }
             map.put(key, value);
         }
 
         return new GuavaMultivaluedMap<>(map);
-    }
-
-    private static String urlDecode(String value)
-    {
-        try {
-            return URLDecoder.decode(value, "UTF-8");
-        }
-        catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException(e);
-        }
     }
 
     @Override
